[package]
name = "rust-ui-iced"
version = "0.1.0"
authors = ["davidedelpapa <davidedelpapa@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { features = ["glow"], git = "https://github.com/hecrj/iced.git" }
